<?xml version="1.0"?>
<package>
  <name>rosjava_knowrob_seds</name>
  <version>0.1.0</version>
  <description>The rosjava_knowrob_seds package</description>

  <maintainer email="nadiafigueroa@todo.todo">nadiafigueroa</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rosjava_build_tools</build_depend>
  <build_depend>json_prolog</build_depend>
  <build_depend>rosjava_bootstrap</build_depend>
  <build_depend>rosjava_messages</build_depend>
  <build_depend>knowrob_common</build_depend>
  <build_depend>knowrob_srdl</build_depend>


  <run_depend>json_prolog</run_depend>
  <run_depend>knowrob_common</run_depend>
  <run_depend>knowrob_srdl</run_depend>

  <export>

  </export>
</package>
